{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 16103,
  "lineage": "63d75121-017c-3f94-a9e5-b92faffd8f2c",
  "resources": [
    {
      "mode": "data",
      "type": "aws_network_interface",
      "name": "get_codedeploy_endpoint_commands_secure_private_dns_name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "data",
      "type": "aws_network_interface",
      "name": "get_codedeploy_endpoint_private_dns_name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "default_network_acl_VPC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062812664163:network-acl/acl-04964fff73ade3efd",
            "default_network_acl_id": "acl-04964fff73ade3efd",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 1,
                "to_port": 0
              }
            ],
            "id": "acl-04964fff73ade3efd",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 1,
                "to_port": 0
              }
            ],
            "owner_id": "062812664163",
            "subnet_ids": null,
            "tags": {
              "Name": "Default ACL"
            },
            "vpc_id": "vpc-080cab294e28df3df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.dummy_default_acl_VPC1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0a559142f96175501",
            "id": "rtb-0a559142f96175501",
            "owner_id": "062812664163",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "VPC1 Default Table"
            },
            "vpc_id": "vpc-080cab294e28df3df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default_security_group_VPC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062812664163:security-group/sg-0848dba4f354210ec",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "UDP HTTP Traffic from internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0848dba4f354210ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TCP HTTP Traffic from internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "062812664163",
            "revoke_rules_on_delete": false,
            "tags": null,
            "vpc_id": "vpc-080cab294e28df3df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat_useast1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-00d27b9da36aa2497",
            "domain": "vpc",
            "id": "eipalloc-011ccb477145308cb",
            "instance": "i-0f99c3a6f97bad459",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a44a1a68bf90378f",
            "private_dns": "ip-192-168-1-5.ec2.internal",
            "private_ip": "192.168.1.5",
            "public_dns": "ec2-54-144-191-229.compute-1.amazonaws.com",
            "public_ip": "54.144.191.229",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_default_security_group.default_security_group_VPC1",
            "aws_instance.nat_useast1a",
            "aws_key_pair.nat_key3",
            "aws_subnet.subnet1_VPC1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat_useast1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0cb8f7b8e7df8f335",
            "domain": "vpc",
            "id": "eipalloc-0edccb55c030a0c7c",
            "instance": "i-0095ad9096826e2f2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d473a6b67c22bb78",
            "private_dns": "ip-192-168-4-5.ec2.internal",
            "private_ip": "192.168.4.5",
            "public_dns": "ec2-34-196-143-117.compute-1.amazonaws.com",
            "public_ip": "34.196.143.117",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_default_security_group.default_security_group_VPC1",
            "aws_instance.nat_useast1b",
            "aws_key_pair.nat_key2",
            "aws_subnet.subnet4_VPC1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat_useast1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01ef31f9f39c5aaed",
            "arn": "arn:aws:ec2:us-east-1:062812664163:instance/i-0f99c3a6f97bad459",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "CICDterraformRole",
            "id": "i-0f99c3a6f97bad459",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "NATserv1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0a44a1a68bf90378f",
            "private_dns": "ip-192-168-1-5.ec2.internal",
            "private_ip": "192.168.1.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-01ca44cc8b654a9ae",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0fd48c89fdcb2591e",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0848dba4f354210ec"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default_security_group_VPC1",
            "aws_key_pair.nat_key3",
            "aws_subnet.subnet1_VPC1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat_useast1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01ef31f9f39c5aaed",
            "arn": "arn:aws:ec2:us-east-1:062812664163:instance/i-0095ad9096826e2f2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "CICDterraformRole",
            "id": "i-0095ad9096826e2f2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "NATserv2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0d473a6b67c22bb78",
            "private_dns": "ip-192-168-4-5.ec2.internal",
            "private_ip": "192.168.4.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0c40c76f7ad600577",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-02747d32cb38a6b91",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0848dba4f354210ec"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default_security_group_VPC1",
            "aws_key_pair.nat_key2",
            "aws_subnet.subnet4_VPC1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver_1_PRODUCTION",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04af77ce6ebf6d180",
            "arn": "arn:aws:ec2:us-east-1:062812664163:instance/i-076e484fb4c75444c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-instance-profile",
            "id": "i-076e484fb4c75444c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Webserver1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-00d9e0c144c006090"
              }
            ],
            "primary_network_interface_id": "eni-00d9e0c144c006090",
            "private_dns": "ip-192-168-2-8.ec2.internal",
            "private_ip": "192.168.2.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07ede8de32a59581f",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eedb25b5c2a93638",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0848dba4f354210ec"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default_security_group_VPC1",
            "aws_iam_instance_profile.ec2_instance_profile",
            "aws_iam_role.ec2IAMRole",
            "aws_key_pair.production_key1",
            "aws_network_interface.webserver_1_interface",
            "aws_subnet.subnet2_VPC1",
            "aws_vpc.VPC1",
            "data.aws_ami.getAMI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver_2_PRODUCTION",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04af77ce6ebf6d180",
            "arn": "arn:aws:ec2:us-east-1:062812664163:instance/i-0071fd65570c72edb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-instance-profile",
            "id": "i-0071fd65570c72edb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Webserver2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-07e0ac767f472210b"
              }
            ],
            "primary_network_interface_id": "eni-07e0ac767f472210b",
            "private_dns": "ip-192-168-5-8.ec2.internal",
            "private_ip": "192.168.5.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06f5aaef9105e7d64",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff0e6befbbfd36f0",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0848dba4f354210ec"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default_security_group_VPC1",
            "aws_iam_instance_profile.ec2_instance_profile",
            "aws_iam_role.ec2IAMRole",
            "aws_key_pair.production_key2",
            "aws_network_interface.webserver_2_interface",
            "aws_subnet.subnet5_VPC1",
            "aws_vpc.VPC1",
            "data.aws_ami.getAMI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw1_VPC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062812664163:internet-gateway/igw-0ecd062d37e6fc386",
            "id": "igw-0ecd062d37e6fc386",
            "owner_id": "062812664163",
            "tags": {
              "Name": "VPC1_Internet_Gateway"
            },
            "vpc_id": "vpc-080cab294e28df3df"
          },
          "dependencies": [
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_loadbalancer_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:062812664163:loadbalancer/app/Application-LoadBalancer-1/5f6212510a61ff0e",
            "arn_suffix": "app/Application-LoadBalancer-1/5f6212510a61ff0e",
            "dns_name": "Application-LoadBalancer-1-93908323.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:062812664163:loadbalancer/app/Application-LoadBalancer-1/5f6212510a61ff0e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Application-LoadBalancer-1",
            "security_groups": [
              "sg-0848dba4f354210ec"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02747d32cb38a6b91"
              },
              {
                "subnet_id": "subnet-0fd48c89fdcb2591e"
              }
            ],
            "subnets": [
              "subnet-02747d32cb38a6b91",
              "subnet-0fd48c89fdcb2591e"
            ],
            "tags": {
              "Environment": "production"
            },
            "vpc_id": "vpc-080cab294e28df3df",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_default_security_group.default_security_group_VPC1",
            "aws_subnet.subnet1_VPC1",
            "aws_subnet.subnet4_VPC1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "network_loadbalancer_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:062812664163:loadbalancer/net/network-loadbalancer-2/107af7e515d4a1f5",
            "arn_suffix": "net/network-loadbalancer-2/107af7e515d4a1f5",
            "dns_name": "network-loadbalancer-2-107af7e515d4a1f5.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:062812664163:loadbalancer/net/network-loadbalancer-2/107af7e515d4a1f5",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "network-loadbalancer-2",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0cd8fafe82d76e2b6"
              },
              {
                "subnet_id": "subnet-0f344c25f159f21aa"
              }
            ],
            "subnets": [
              "subnet-0cd8fafe82d76e2b6",
              "subnet-0f344c25f159f21aa"
            ],
            "tags": {
              "Environment": "production"
            },
            "vpc_id": "vpc-080cab294e28df3df",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "aws_subnet.subnet3_VPC1",
            "aws_subnet.subnet6_VPC1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "application_loadbalancer_listener_codedeploy_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "application_loadbalancer_listener_codedeploy_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:062812664163:listener/app/Application-LoadBalancer-1/5f6212510a61ff0e/99d7b9bcf9022d90",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:062812664163:listener/app/Application-LoadBalancer-1/5f6212510a61ff0e/99d7b9bcf9022d90",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:062812664163:loadbalancer/app/Application-LoadBalancer-1/5f6212510a61ff0e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_security_group.default_security_group_VPC1",
            "aws_lb.application_loadbalancer_1",
            "aws_subnet.subnet1_VPC1",
            "aws_subnet.subnet4_VPC1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "application_loadbalancer_listener_codedeploy_8443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "network_loadbalancer_1_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:062812664163:listener/net/network-loadbalancer-2/107af7e515d4a1f5/16e199ed76afb073",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:062812664163:targetgroup/target-group-2-mySQL/b9c47df5177f0afd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:062812664163:listener/net/network-loadbalancer-2/107af7e515d4a1f5/16e199ed76afb073",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:062812664163:loadbalancer/net/network-loadbalancer-2/107af7e515d4a1f5",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.network_loadbalancer_private",
            "aws_lb_target_group.target_group_2_mySQL",
            "aws_subnet.subnet3_VPC1",
            "aws_subnet.subnet6_VPC1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "codedeploy_443_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "codedeploy_8443_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group_1_HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:062812664163:targetgroup/target-group-1/e5eafd2273eba489",
            "arn_suffix": "targetgroup/target-group-1/e5eafd2273eba489",
            "deregistration_delay": 5,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 9,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:062812664163:targetgroup/target-group-1/e5eafd2273eba489",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group-1",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-080cab294e28df3df"
          },
          "dependencies": [
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group_2_mySQL",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:062812664163:targetgroup/target-group-2-mySQL/b9c47df5177f0afd",
            "arn_suffix": "targetgroup/target-group-2-mySQL/b9c47df5177f0afd",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:062812664163:targetgroup/target-group-2-mySQL/b9c47df5177f0afd",
            "lambda_multi_value_headers_enabled": false,
            "name": "target-group-2-mySQL",
            "port": 80,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-080cab294e28df3df"
          },
          "dependencies": [
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "targetgroup1_attachment_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:062812664163:targetgroup/target-group-1/e5eafd2273eba489-20210220043831766500000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:062812664163:targetgroup/target-group-1/e5eafd2273eba489",
            "target_id": "i-076e484fb4c75444c"
          },
          "dependencies": [
            "aws_default_security_group.default_security_group_VPC1",
            "aws_iam_instance_profile.ec2_instance_profile",
            "aws_iam_role.ec2IAMRole",
            "aws_instance.webserver_1_PRODUCTION",
            "aws_key_pair.production_key1",
            "aws_lb_target_group.target_group_1_HTTP",
            "aws_network_interface.webserver_1_interface",
            "aws_subnet.subnet2_VPC1",
            "aws_vpc.VPC1",
            "data.aws_ami.getAMI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "targetgroup1_attachment_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:062812664163:targetgroup/target-group-1/e5eafd2273eba489-20210220043833846500000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:062812664163:targetgroup/target-group-1/e5eafd2273eba489",
            "target_id": "i-0071fd65570c72edb"
          },
          "dependencies": [
            "aws_default_security_group.default_security_group_VPC1",
            "aws_iam_instance_profile.ec2_instance_profile",
            "aws_iam_role.ec2IAMRole",
            "aws_instance.webserver_2_PRODUCTION",
            "aws_key_pair.production_key2",
            "aws_lb_target_group.target_group_1_HTTP",
            "aws_network_interface.webserver_2_interface",
            "aws_subnet.subnet5_VPC1",
            "aws_vpc.VPC1",
            "data.aws_ami.getAMI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "dummy_default_acl_VPC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062812664163:network-acl/acl-04964fff73ade3efd",
            "egress": [],
            "id": "acl-04964fff73ade3efd",
            "ingress": [],
            "owner_id": "062812664163",
            "subnet_ids": [],
            "tags": {
              "Name": "Default ACL"
            },
            "vpc_id": "vpc-080cab294e28df3df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private_subnet_1_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062812664163:network-acl/acl-06de74ce813fd1583",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 10,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "192.168.0.2/32",
                "from_port": 53,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 1,
                "to_port": 53
              },
              {
                "action": "allow",
                "cidr_block": "192.168.1.0/24",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 50,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "192.168.1.0/24",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "udp",
                "rule_no": 60,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "192.168.1.0/24",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 30,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "192.168.4.0/24",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 51,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "192.168.4.0/24",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "udp",
                "rule_no": 61,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "192.168.4.0/24",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 31,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "3.223.132.252/32",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 299,
                "to_port": 22
              }
            ],
            "id": "acl-06de74ce813fd1583",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "192.168.0.2/32",
                "from_port": 53,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "udp",
                "rule_no": 1,
                "to_port": 53
              },
              {
                "action": "allow",
                "cidr_block": "192.168.1.0/24",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 50,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "192.168.1.0/24",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "udp",
                "rule_no": 60,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "192.168.1.0/24",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 10,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "192.168.1.0/24",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 30,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "192.168.4.0/24",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 51,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "192.168.4.0/24",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "udp",
                "rule_no": 61,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "192.168.4.0/24",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 11,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "192.168.4.0/24",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 31,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "3.223.132.252/32",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 299,
                "to_port": 22
              }
            ],
            "owner_id": "062812664163",
            "subnet_ids": [
              "subnet-0eedb25b5c2a93638",
              "subnet-0ff0e6befbbfd36f0"
            ],
            "tags": {
              "Name": "Webservers Private Subnet ACL"
            },
            "vpc_id": "vpc-080cab294e28df3df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.subnet1_VPC1",
            "aws_subnet.subnet2_VPC1",
            "aws_subnet.subnet4_VPC1",
            "aws_subnet.subnet5_VPC1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private_subnet_2_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062812664163:network-acl/acl-07f9737d3e9f70d2f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 1,
                "to_port": 0
              }
            ],
            "id": "acl-07f9737d3e9f70d2f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 1,
                "to_port": 0
              }
            ],
            "owner_id": "062812664163",
            "subnet_ids": [
              "subnet-0cd8fafe82d76e2b6",
              "subnet-0f344c25f159f21aa"
            ],
            "tags": {
              "Name": "Private"
            },
            "vpc_id": "vpc-080cab294e28df3df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.subnet3_VPC1",
            "aws_subnet.subnet6_VPC1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062812664163:network-acl/acl-050e74cb7f018bcc1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 50,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "udp",
                "rule_no": 60,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 10,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 30,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "192.168.0.2/32",
                "from_port": 53,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "udp",
                "rule_no": 1,
                "to_port": 53
              },
              {
                "action": "allow",
                "cidr_block": "192.168.2.0/24",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 299,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "192.168.5.0/24",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 298,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "3.223.132.252/32",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 22
              }
            ],
            "id": "acl-050e74cb7f018bcc1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 50,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "udp",
                "rule_no": 60,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 10,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 30,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "192.168.0.2/32",
                "from_port": 53,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "udp",
                "rule_no": 1,
                "to_port": 53
              },
              {
                "action": "allow",
                "cidr_block": "3.223.132.252/32",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 199,
                "to_port": 22
              }
            ],
            "owner_id": "062812664163",
            "subnet_ids": [
              "subnet-02747d32cb38a6b91",
              "subnet-0fd48c89fdcb2591e"
            ],
            "tags": {
              "Name": "AppLB/NATinstance Public Subnet ACL"
            },
            "vpc_id": "vpc-080cab294e28df3df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.subnet1_VPC1",
            "aws_subnet.subnet2_VPC1",
            "aws_subnet.subnet4_VPC1",
            "aws_subnet.subnet5_VPC1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "webserver_1_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "Interface for webserver 1",
            "id": "eni-00d9e0c144c006090",
            "ipv6_address_count": 0,
            "mac_address": "12:04:24:84:f7:43",
            "private_dns_name": "ip-192-168-2-8.ec2.internal",
            "private_ip": "192.168.2.8",
            "private_ips": [
              "192.168.2.8"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0848dba4f354210ec"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eedb25b5c2a93638"
          },
          "dependencies": [
            "aws_default_security_group.default_security_group_VPC1",
            "aws_subnet.subnet2_VPC1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "webserver_2_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "Interface for webserver 2",
            "id": "eni-07e0ac767f472210b",
            "ipv6_address_count": 0,
            "mac_address": "0a:db:c4:0e:ec:7d",
            "private_dns_name": "ip-192-168-5-8.ec2.internal",
            "private_ip": "192.168.5.8",
            "private_ips": [
              "192.168.5.8"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0848dba4f354210ec"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff0e6befbbfd36f0"
          },
          "dependencies": [
            "aws_default_security_group.default_security_group_VPC1",
            "aws_subnet.subnet5_VPC1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_1_useast1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06232d6593148b456",
            "owner_id": "062812664163",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-0f99c3a6f97bad459",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private1-USeast1a"
            },
            "vpc_id": "vpc-080cab294e28df3df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_security_group.default_security_group_VPC1",
            "aws_instance.nat_useast1a",
            "aws_key_pair.nat_key3",
            "aws_subnet.subnet1_VPC1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_1_useast1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0947c07abdd0e2072",
            "owner_id": "062812664163",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-0095ad9096826e2f2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private1-USeast1b"
            },
            "vpc_id": "vpc-080cab294e28df3df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_security_group.default_security_group_VPC1",
            "aws_instance.nat_useast1b",
            "aws_key_pair.nat_key2",
            "aws_subnet.subnet4_VPC1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_2_useast1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0176c65d7a592a0f3",
            "owner_id": "062812664163",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private2-USeast1a"
            },
            "vpc_id": "vpc-080cab294e28df3df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_2_useast1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03748b31a3f7e6e86",
            "owner_id": "062812664163",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private-USeast1b"
            },
            "vpc_id": "vpc-080cab294e28df3df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table_useast1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e94a71e2f1210490",
            "owner_id": "062812664163",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ecd062d37e6fc386",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-USeast1a"
            },
            "vpc_id": "vpc-080cab294e28df3df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw1_VPC1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table_useast1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05c9cb9a56abbb051",
            "owner_id": "062812664163",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ecd062d37e6fc386",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-USeast1b"
            },
            "vpc_id": "vpc-080cab294e28df3df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw1_VPC1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_1_pub_route_useast1a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0961f6fd0e750f835",
            "route_table_id": "rtb-0e94a71e2f1210490",
            "subnet_id": "subnet-0fd48c89fdcb2591e"
          },
          "dependencies": [
            "aws_internet_gateway.gw1_VPC1",
            "aws_route_table.public_route_table_useast1a",
            "aws_subnet.subnet1_VPC1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_2_priv_route_useast1a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bf20cc765822c51",
            "route_table_id": "rtb-06232d6593148b456",
            "subnet_id": "subnet-0eedb25b5c2a93638"
          },
          "dependencies": [
            "aws_default_security_group.default_security_group_VPC1",
            "aws_instance.nat_useast1a",
            "aws_key_pair.nat_key3",
            "aws_route_table.private_route_table_1_useast1a",
            "aws_subnet.subnet1_VPC1",
            "aws_subnet.subnet2_VPC1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_3_priv_route_useast1a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db42e9ec249fdd14",
            "route_table_id": "rtb-0176c65d7a592a0f3",
            "subnet_id": "subnet-0f344c25f159f21aa"
          },
          "dependencies": [
            "aws_route_table.private_route_table_2_useast1a",
            "aws_subnet.subnet3_VPC1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_4_pub_route_useast1b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08156a344f1192397",
            "route_table_id": "rtb-05c9cb9a56abbb051",
            "subnet_id": "subnet-02747d32cb38a6b91"
          },
          "dependencies": [
            "aws_internet_gateway.gw1_VPC1",
            "aws_route_table.public_route_table_useast1b",
            "aws_subnet.subnet4_VPC1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_5_priv_route_table_1_useast1b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00151341d55140c2e",
            "route_table_id": "rtb-0947c07abdd0e2072",
            "subnet_id": "subnet-0ff0e6befbbfd36f0"
          },
          "dependencies": [
            "aws_default_security_group.default_security_group_VPC1",
            "aws_instance.nat_useast1b",
            "aws_key_pair.nat_key2",
            "aws_route_table.private_route_table_1_useast1b",
            "aws_subnet.subnet4_VPC1",
            "aws_subnet.subnet5_VPC1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_6_priv_route_2_useast1b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013b25e7e1a551a22",
            "route_table_id": "rtb-03748b31a3f7e6e86",
            "subnet_id": "subnet-0cd8fafe82d76e2b6"
          },
          "dependencies": [
            "aws_route_table.private_route_table_2_useast1b",
            "aws_subnet.subnet6_VPC1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_secgrp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062812664163:security-group/sg-0259053e3e27ddf06",
            "description": "Security Group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "192.168.0.2/32"
                ],
                "description": "DNS Traffic to Route53 Resolver",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "192.168.2.0/24",
                  "192.168.5.0/24"
                ],
                "description": "TCP Ephemeral Traffic to Web Servers",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "192.168.2.0/24",
                  "192.168.5.0/24"
                ],
                "description": "TCP HTTP Traffic to Web Servers",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "192.168.2.0/24",
                  "192.168.5.0/24"
                ],
                "description": "TCP HTTPS Traffic to Web Servers",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "192.168.2.0/24",
                  "192.168.5.0/24"
                ],
                "description": "UDP Ephemeral Traffic to Web Servers",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0259053e3e27ddf06",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TCP HTTP Traffic from Anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TCP HTTPS Traffic from Anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "UDP HTTP Traffic from Anywhere",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [
                  "192.168.0.2/32"
                ],
                "description": "DNS Traffic from Route53 Resolver",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              }
            ],
            "name": "ALB Security Group",
            "name_prefix": "",
            "owner_id": "062812664163",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AppLB Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-080cab294e28df3df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.subnet2_VPC1",
            "aws_subnet.subnet5_VPC1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat_instance_secgrp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "arn": null,
            "description": "Security Group for NAT instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TCP Ephemeral Traffic to Anywhere",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TCP HTTP Traffic to Anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TCP HTTPS Traffic to Anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "UDP Ephemeral Traffic to Anywhere",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "192.168.0.2/32"
                ],
                "description": "DNS Traffic to Route53 Resolver",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "3.223.132.252/32",
                  "192.168.2.0/24",
                  "192.168.5.0/24"
                ],
                "description": "SSH Traffic to Web Servers",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0bd4092970e6014e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "3.223.132.252/32"
                ],
                "description": "SSH Traffic from Bastion Host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "DNS Traffic from Route53 Resolver",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "192.168.0.2/32"
                ],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "TCP Ephemeral Traffic from Web Servers",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06d315626ecdd4d70"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "UDP Ephemeral Traffic from Web Servers",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-06d315626ecdd4d70"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "NAT Security Group",
            "name_prefix": null,
            "owner_id": null,
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "NAT Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-080cab294e28df3df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_secgrp",
            "aws_security_group.web_instance_secgrp",
            "aws_subnet.subnet1_VPC1",
            "aws_subnet.subnet2_VPC1",
            "aws_subnet.subnet4_VPC1",
            "aws_subnet.subnet5_VPC1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_instance_secgrp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062812664163:security-group/sg-06d315626ecdd4d70",
            "description": "Security Group for NAT instances",
            "egress": [
              {
                "cidr_blocks": [
                  "192.168.0.2/32"
                ],
                "description": "DNS Traffic to Route53 Resolver",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "192.168.1.0/24",
                  "192.168.4.0/24"
                ],
                "description": "TCP Ephemeral Traffic to NAT Servers",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "192.168.1.0/24",
                  "192.168.4.0/24"
                ],
                "description": "TCP HTTP Traffic to NAT Servers",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "192.168.1.0/24",
                  "192.168.4.0/24"
                ],
                "description": "TCP HTTPS Traffic to NAT Servers",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "192.168.1.0/24",
                  "192.168.4.0/24"
                ],
                "description": "UDP Ephemeral Traffic to NAT Servers",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "192.168.2.0/24",
                  "192.168.5.0/24"
                ],
                "description": "TCP HTTPS Traffic to CodeDeploy Endpoint",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-06d315626ecdd4d70",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.2/32"
                ],
                "description": "DNS Traffic from Route53 Resolvere",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "192.168.1.0/24",
                  "192.168.4.0/24"
                ],
                "description": "SSH Traffic from NAT servers",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "TCP Ephemeral Traffic from appLB ",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0259053e3e27ddf06"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "TCP HTTP Traffic/Health Check from appLB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0259053e3e27ddf06"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "TCP HTTPS Traffic from appLB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0259053e3e27ddf06"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "UDP Ephemeral Traffic from appLB ",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-0259053e3e27ddf06"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "Web Security Group",
            "name_prefix": "",
            "owner_id": "062812664163",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Server Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-080cab294e28df3df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_secgrp",
            "aws_subnet.subnet1_VPC1",
            "aws_subnet.subnet2_VPC1",
            "aws_subnet.subnet4_VPC1",
            "aws_subnet.subnet5_VPC1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_codedeploy_endpoint_secgrp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062812664163:security-group/sg-0bab0bd963526d334",
            "description": "Permits access to Webservers from CodeDeploy Endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TCP HTTPS Traffic to CodeDeploy Service",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0bab0bd963526d334",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.2.0/24",
                  "192.168.5.0/24"
                ],
                "description": "TCP HTTPS Traffic from Web Servers",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "codedeployendpointsecgrp",
            "name_prefix": "",
            "owner_id": "062812664163",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "CodeDeploy Endpoint Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-080cab294e28df3df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.subnet2_VPC1",
            "aws_subnet.subnet5_VPC1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1_VPC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062812664163:subnet/subnet-0fd48c89fdcb2591e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0fd48c89fdcb2591e",
            "map_public_ip_on_launch": false,
            "owner_id": "062812664163",
            "tags": {
              "Name": "subnet1_VPC1"
            },
            "vpc_id": "vpc-080cab294e28df3df"
          },
          "dependencies": [
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2_VPC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062812664163:subnet/subnet-0eedb25b5c2a93638",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0eedb25b5c2a93638",
            "map_public_ip_on_launch": false,
            "owner_id": "062812664163",
            "tags": {
              "Name": "subnet2_VPC1"
            },
            "vpc_id": "vpc-080cab294e28df3df"
          },
          "dependencies": [
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3_VPC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062812664163:subnet/subnet-0f344c25f159f21aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-0f344c25f159f21aa",
            "map_public_ip_on_launch": false,
            "owner_id": "062812664163",
            "tags": {
              "Name": "subnet3_VPC1"
            },
            "vpc_id": "vpc-080cab294e28df3df"
          },
          "dependencies": [
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet4_VPC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062812664163:subnet/subnet-02747d32cb38a6b91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-02747d32cb38a6b91",
            "map_public_ip_on_launch": false,
            "owner_id": "062812664163",
            "tags": {
              "Name": "subnet4_VPC1"
            },
            "vpc_id": "vpc-080cab294e28df3df"
          },
          "dependencies": [
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet5_VPC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062812664163:subnet/subnet-0ff0e6befbbfd36f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.5.0/24",
            "id": "subnet-0ff0e6befbbfd36f0",
            "map_public_ip_on_launch": false,
            "owner_id": "062812664163",
            "tags": {
              "Name": "subnet5_VPC1"
            },
            "vpc_id": "vpc-080cab294e28df3df"
          },
          "dependencies": [
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet6_VPC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062812664163:subnet/subnet-0cd8fafe82d76e2b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.6.0/24",
            "id": "subnet-0cd8fafe82d76e2b6",
            "map_public_ip_on_launch": false,
            "owner_id": "062812664163",
            "tags": {
              "Name": "subnet6_VPC1"
            },
            "vpc_id": "vpc-080cab294e28df3df"
          },
          "dependencies": [
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062812664163:vpc/vpc-080cab294e28df3df",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-026f171c3138f0298",
            "default_route_table_id": "rtb-0a559142f96175501",
            "default_security_group_id": "sg-0848dba4f354210ec",
            "dhcp_options_id": "dopt-d40568ae",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-080cab294e28df3df",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a559142f96175501",
            "owner_id": "062812664163",
            "tags": {
              "Name": "VPC1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codedeploy_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062812664163:vpc-endpoint/vpce-03396d6cd6b587457",
            "dns_entry": [
              {
                "dns_name": "vpce-03396d6cd6b587457-dg8nkg5l.codedeploy.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03396d6cd6b587457-dg8nkg5l-us-east-1a.codedeploy.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03396d6cd6b587457-dg8nkg5l-us-east-1b.codedeploy.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "codedeploy.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z01982311RCBK88O2514T"
              }
            ],
            "id": "vpce-03396d6cd6b587457",
            "network_interface_ids": [
              "eni-0bd326b1d46403381",
              "eni-0c7a41784e3202b4e"
            ],
            "owner_id": "062812664163",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0848dba4f354210ec"
            ],
            "service_name": "com.amazonaws.us-east-1.codedeploy",
            "state": "available",
            "subnet_ids": [
              "subnet-0eedb25b5c2a93638",
              "subnet-0ff0e6befbbfd36f0"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-080cab294e28df3df"
          },
          "dependencies": [
            "aws_default_security_group.default_security_group_VPC1",
            "aws_subnet.subnet2_VPC1",
            "aws_subnet.subnet5_VPC1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codedeploy_endpoint_commands_secure",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062812664163:vpc-endpoint/vpce-03790ea24e9b80830",
            "dns_entry": [
              {
                "dns_name": "vpce-03790ea24e9b80830-oqiwcvcp.codedeploy-commands-secure.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03790ea24e9b80830-oqiwcvcp-us-east-1b.codedeploy-commands-secure.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03790ea24e9b80830-oqiwcvcp-us-east-1a.codedeploy-commands-secure.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "codedeploy-commands-secure.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z10203333H2LCGO4WWU5E"
              }
            ],
            "id": "vpce-03790ea24e9b80830",
            "network_interface_ids": [
              "eni-03117a4cebe6692fb",
              "eni-03bdbb0ccd7eeacd6"
            ],
            "owner_id": "062812664163",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0848dba4f354210ec"
            ],
            "service_name": "com.amazonaws.us-east-1.codedeploy-commands-secure",
            "state": "available",
            "subnet_ids": [
              "subnet-0eedb25b5c2a93638",
              "subnet-0ff0e6befbbfd36f0"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-080cab294e28df3df"
          },
          "dependencies": [
            "aws_default_security_group.default_security_group_VPC1",
            "aws_subnet.subnet2_VPC1",
            "aws_subnet.subnet5_VPC1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    }
  ]
}